fixed exercise 6 mistake, compete exrcise 7 fixed embarassing footer/header solution in exercise 6 by replacing 'space between' with flex:1 for body. excise 7 practiced flex wrap, alignment.

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -7,7 +7,6 @@ body {
   font-family: Roboto, sans-serif;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
 .header,
@@ -21,7 +20,11 @@ body {
 }
 
 .content{
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
 }
 
 .footer{
